--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     
     <div class="container1">
         <video autoplay loop muted playinline>
-            <source src="Assets/mylivewallpapers-com-Neon-City-Sunrise.mp4" type="video/webm">
+            <source src="Assets/live1.mp4" type="video/webm">
         </video>
 
         <div class="link-bio">
             <div class="profile-photo">
-                <img src="Assets/1687016005976.jpg" alt="profile-photo">
+                <img src="Assets/profile.png" alt="profile-photo">
             </div>
 
             <p>Richardo</p>
