--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
 
             <p>&copy;2023 Richardo Yhz</p>
-        </div>s
+        </div>
     </div>
 
     <script src="script.js"></script>
